<resources>
    <string name="app_name">Moneygest</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="resumen">Resumen</string>
    <string name="inversiones">Inversiones</string>
    <string name="area_personal">Área Personal</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="registrarme">Registrarme</string>
    <string name="loguearme">Loguearme</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="correo_usuario">correo@correo.com</string>
    <string name="pass_usuario">Contraseña</string>
    <string name="gasto_total">Gasto Total</string>
    <string name="gasto_mayor">Gasto Mayor</string>
    <string name="gasto_objetivo">Gasto Objetivo</string>
    <string name="info_gastos">Detalles/Modificar/Eliminar Gastos</string>
    <string name="info_ingresos">Alta/Modificación Ingresos</string>
    <string name="modificar">MODIFICAR</string>
    <string name="añadir">AÑADIR</string>
    <string name="guardar">GUARDAR</string>
    <string name="filtros">FILTROS</string>
    <string name="contacto">Contacto</string>
    <string name="registrar_gasto">Añadir Gasto</string>
    <string name="registrar_ingreso">Añadir Ingreso</string>
    <string name="modificar_gasto">Modificar Gasto</string>
    <string name="modificar_ingreso">Modificar Ingreso</string>
    <string name="detalles">DETALLES</string>
    <string name="registro_text">¿No tienes una cuenta? Registrate</string>
    <string name="login_text">¿Ya tienes una cuenta? </string>
    <string name="item0">Home</string>
    <string name="item1">Gastos</string>
    <string name="item2">Ingresos</string>
    <string name="item3">Area Personal</string>
    <string name="item4">Logout</string>
    <string name="Diego">Diego Rodríguez Taboada</string>
    <string name="correo_diego">drtaboada17@esei.uvigo.es</string>
    <string name="Iago">Iago Seara Vicente</string>
    <string name="correo_iago">isvicente17@esei.uvigo.es</string>
    <string name="Michael">Michael Sordo Seijo</string>
    <string name="correo_michael">msseijo18@esei.uvigo.es</string>
    <string name="filtro_gastos">Filtro gastos</string>
    <string name="filtro_ingresos">Filtro ingresos</string>
    <string name="nombre_usuario_ap">Nombre de usuario</string>
    <string name="correo_ap">Correo</string>
    <string name="contraseña_ap">Contraseña</string>
    <string name="tipo_gasto">Tipo</string>
    <string name="tipo_ingreso">Tipo</string>
    <string name="cantidad_ingreso">Cantidad</string>
    <string name="cantidad_gasto">Cantidad</string>
    <string name="fecha_ingreso">Fecha</string>
    <string name="fecha_gasto">Fecha</string>
    <string name="aplicar_filtro">Aplicar</string>
    <string name="home">HOME</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="concepto">Concepto</string>
    <string name="cantidad">Cantidad</string>
    <string name="fecha">Fecha</string>
    <string name="sesion">Iniciar sesión</string>
    <string name="regsitrarse">Regístrate aquí</string>
    <string name="fecha_ingreso_min">Fecha ingresos min</string>
    <string name="fecha_ingreso_max">Fecha ingresos max</string>
    <string name="cantidad_ingreso_min">Cantidad ingresos min</string>
    <string name="cantidad_ingreso_max">Cantidad ingresos max</string>
    <string name="fecha_gasto_min">Fecha gastos min</string>
    <string name="fecha_gasto_max">Fecha gastos max</string>
    <string name="cantidad_gasto_min">Cantidad gastos min</string>
    <string name="cantidad_gasto_max">Cantidad gastos max</string>



</resources>