<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registro_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registro_email_usuario"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/correo_usuario"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registro_pass_usuario"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/pass_usuario"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/boton_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_radius"
            android:onClick="registrar"
            android:text="@string/registro" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/login_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_registro_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_radius"
                android:onClick="ejecutar_login"
                android:text="@string/loguearme" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>