<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/area_personal_text"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginBottom="25dp"
            android:paddingTop="10sp"
            android:text="@string/area_personal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_nombre_usuario_ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nombre_usuario_ap"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/area_nombre_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="55dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_correo_ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/correo_ap"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/area_correo_usuario"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="55dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView_contraseña_ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/contraseña_ap"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/area_pass_usuario"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="32dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/boton_area_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_radius"
            android:onClick="modificarCuenta"
            android:text="@string/modificar" />

    </LinearLayout>
</RelativeLayout>